# DocQuery-MCP

./: .gitignore  README.md  pyproject.toml  readme-rough.md
docs/: INTERACTION_LOG.md  PROJECT_NOTES.md  SETUP_AND_TESTING.md  VIBE_CODING.md
scripts/: ingest.py  qa_loop.py  run_mcp_server.sh
src/docquery_mcp/: __init__.py  answerer.py  chunking.py  config.py  embeddings.py  ingest.py  pdf_loader.py  retriever.py  schemas.py  server.py  vector_store.py
